--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Portfolio</title>
+    <title>Sanket Bista Chhetri</title>
 
     <meta name="description" content="">
     <meta name="author" content="">
@@ -232,6 +232,24 @@
                 </form>
             </div>
         </section><!-- /.section-form -->
+    
+     <footer id="colophon" class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-xs-12">
+                    <a class="icon facebook-bg" href="https://www.facebook.com/sanket.xettri.75"><i class="icon-facebook"></i></a>
+                    <a class="icon twitter-bg" href="https://twitter.com/SanketXettri"><i class="icon-twitter"></i></a>
+                    <a class="icon linkedin-bg" href="https://www.linkedin.com/in/sanket-xettri-4145771b2/"><i class="icon-linkedin"></i></a>
+                </div>
+                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2022. All Rights Reserved</p></div>
+                <div class="col-sm-4 col-xs-3">
+                    <div class="text-right page-scroll">
+                        <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer><!-- /#footer -->
 
     </main><!-- /#main -->
 
