--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="col-md-6">
                     <h1>Hello, It's me Sanket Bista Chhetri</h1>
                     <div class="page-scroll">
-                        <p class="job-title">A Back-end web developer</p>
+                        <p class="job-title">A Back-end web developer and Data Entry clerk</p>
                         <a href="#contact" class="btn btn-fill ">Hire me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
