--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hello! I'm Sanket,  Motivated and highly productive Backend Developer with a research background. Detail-oriented with strong skills in multi-tasking and efficient management of day-to-day office operations. Adept at building and maintaining effective working relationships with co-workers and clients through outstanding interpersonal skills.</p>
+                        <p>Hello! I'm Sanket,  Motivated and highly productive Backend Developer and Data entry expert with a research background. Detail-oriented with strong skills in multi-tasking and efficient management of day-to-day office operations. Adept at building and maintaining effective working relationships with co-workers and clients through outstanding interpersonal skills.</p>
                         <a href="CV" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
@@ -147,6 +147,12 @@
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                     </div>
+                       <div class="skill">
+                            <h4>Data Entry</h4>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="80"></div><!-- /.progress-bar -->
+                            </div><!-- /.progress -->
+                        </div><!-- /.skill -->
                    
 
                         
