--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>Hello! I'm Sanket,  Motivated and highly productive Backend Developer and Data entry expert with a research background. Detail-oriented with strong skills in multi-tasking and efficient management of day-to-day office operations. Adept at building and maintaining effective working relationships with co-workers and clients through outstanding interpersonal skills.</p>
-                        <a href="CV" class="btn btn-fill" target="_blank" download>Download my cv</a>
+                        <a href="https://app.box.com/s/fj4nzbc18i4ul1ek0bebyewy2ivyrek8" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
             </div>
@@ -238,7 +238,25 @@
                 </form>
             </div>
         </section><!-- /.section-form -->
-    
+
+     <footer id="colophon" class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 col-xs-12">
+                    <a class="icon facebook-bg" href="https://www.facebook.com/sanket.xettri.75"><i class="icon-facebook"></i></a>
+                    <a class="icon twitter-bg" href="https://twitter.com/SanketXettri"><i class="icon-twitter"></i></a>
+                    <a class="icon linkedin-bg" href="https://www.linkedin.com/in/sanket-xettri-4145771b2/"><i class="icon-linkedin"></i></a>
+                </div>
+                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2022. All Rights Reserved</p></div>
+                <div class="col-sm-4 col-xs-3">
+                    <div class="text-right page-scroll">
+                        <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer><!-- /#footer -->
+
     
 
     </main><!-- /#main -->
